test/shouldPass/expr/notInt.pas
program Sample;
var
  i : integer;

begin
  i := not 10;
  writeln(i);
end.
