test/shouldFail/vonJonas/invalid_identifier03.pas

program InvalidIdentifier03;

var 
  $invalidName : integer;
begin
end.
